# bcmacro-cast

./: README.md
astgrep/: CHANGELOG.md  README.md  project.clj
astgrep/doc/: intro.md
astprint/archive/: README
astprint/extra/: CMakeLists.txt
astprint/extra/astdp/: CMakeLists.txt  astdp.cpp
astprint/extra/astprint/: CMakeLists.txt  astprint.cpp
doc/: ASTprint_document.md  sast-spec.txt
python/: sprint.py
sample/: bad.ast  bad.c  exp45.ast  exp45.c  exp45.clj  options  sample_rule.clj
sample/exp31/: exp31.ast  exp31.c  exp31.clj
sample/exp32/: exp32.ast  exp32.c  exp32.clj  sample.ast  sample.c
sample/exp35/: exp35.ast  exp35.c  exp35.clj  test.ast  test2.ast
sample/exp36/: exp36c.clj  sample1.ast  sample1.c  sample2.ast  sample3.ast  sample3.c  sample4.c
sample/exp40/: exp40.clj  sample1.ast  sample1.c  sample2.ast
sample/exp44/: exp44.clj  sample1.ast  sample1.c  sample2.ast  sample2.c
samplecode/: 5fig1_1a.c  5fig1_1a.clj  5fig1_1b.c  5fig1_1b.clj  5fig2_7R.txt  [5]fig2_7.c  [5]fig2_7.clj  abc.c  abc.clj  arraytest.c  arraytest.clj  arrtest.c  arrtest.clj  asb.c  asb.clj  basetypetest.c  basetypetest.clj  binoptest.c  binoptest.clj  cast-anonymous-struct.c  cast-functype.c  char.c  char.clj  floatloop.c  floatloop.out  foo_so.c  foo_so.clj  fortest.c  fortest.clj  funcfunc.c  funcfunc.clj  functest.c  functest.clj  functype.c  glocal.c  glocal.clj  gototest.c  gototest.clj  hello.cpp  iftest.c  (+36 more)
test/: benchmark-result-candy.txt  cert-mod_write-benchmark.sh  mod_rewrite_compile_options.txt  sample.c
utils/: balance.rb
(+65 files in other folders)
